--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
   height: 100%;
 }
 
-#grid {
+.grid {
   width: 100%;
   height: 100%;
   background: grey;
@@ -17,7 +17,8 @@ body {
   height: 100%;
 }
 
-.block {
+.block,
+.gap {
   width: 100%;
   height: 10%;
   float: left;
